HEAD
	+ Set the right permissions and group for certificates issued by
	  CA module
	+ Improved performance by adding zarafaAccount LDAP index.
2.0.2
	+ Added create/delete account hooks support.
2.0.1
	+ Bugfix: add zarafaQuotaOverride to localAttributes.
2.0
	+ Add ActiveSync support.
	+ Improve help messages.
1.5
	+ Initial release.