@@ -1,5 +1,5 @@
 MAINTAINERCLEANFILES = Makefile.in
 
-pkgdata_SCRIPTS = ebox-zarafa-enable ebox-zarafa-spell
+pkgdata_SCRIPTS = ebox-zarafa-enable ebox-zarafa-spell zarafa-delete-orphan
 
 EXTRA_DIST = $(pkgdata_SCRIPTS)
